--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,54 +1,73 @@
-[build-system]
-requires = ["flit_core>=2,<4"]
-build-backend = "flit_core.buildapi"
-
-[tool.flit.metadata]
-module = "fastapi_jwt_auth"
-dist-name = "fastapi-jwt-auth"
-author = "Nyoman Pradipta Dewantara"
-author-email = "nyomanpradipta120@gmail.com"
-home-page = "https://github.com/IndominusByte/fastapi-jwt-auth"
+[tool.poetry]
+#module = "fastapi_jwt_auth"
+name = "fastapi-jwt-auth"
+authors = ["Nyoman Pradipta Dewantara"]
+description = "Nyoman Pradipta Dewantara"
+version = "0.0.1"
+#author-email = "nyomanpradipta120@gmail.com"
+#home-page = "https://github.com/IndominusByte/fastapi-jwt-auth"
 
 classifiers = [
-  "Environment :: Web Environment",
-  "Intended Audience :: Developers",
-  "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.6",
-  "Programming Language :: Python :: 3.7",
-  "Programming Language :: Python :: 3.8",
-  "License :: OSI Approved :: MIT License",
-  "Operating System :: OS Independent",
-  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
-  "Topic :: Software Development :: Libraries :: Python Modules"
+    "Environment :: Web Environment",
+    "Intended Audience :: Developers",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
+    "Topic :: Software Development :: Libraries :: Python Modules"
 ]
 
-requires = [
-  "fastapi>=0.61.0",
-  "PyJWT>=1.7.1,<2.0.0"
-]
 
-description-file = "README.md"
-requires-python = ">=3.6"
 
-[tool.flit.metadata.urls]
-Documentation = "https://indominusbyte.github.io/fastapi-jwt-auth/"
+[tool.poetry.dependencies]
+fastapi = "^0.109.0"
+PyJWT = "^2"
 
-[tool.flit.metadata.requires-extra]
-test = [
-  "pytest==6.0.1",
-  "pytest-cov==2.10.0",
-  "coveralls==2.1.2"
-]
+python = "^3.10.0, <4"
 
-doc = [
-  "mkdocs>=1.1.2,<2.0.0",
-  "mkdocs-material>=5.5.0,<6.0.0",
-  "markdown-include>=0.5.1,<0.6.0"
-]
 
-dev = [
-  "cryptography>=2.6,<4.0.0",
-  "uvicorn>=0.11.5,<0.12.0"
-]
+#requires = [
+#    "fastapi>=0.61.0",
+#    "PyJWT>=1.7.1,<2.0.0"
+#]
 
-asymmetric = ["cryptography>=2.6,<4.0.0"]
+#description-file = "README.md"
+
+#[tool.poetry.metadata.urls]
+#Documentation = "https://indominusbyte.github.io/fastapi-jwt-auth/"
+#
+#[tool.poetry.metadata.requires-extra]
+#test = [
+#    "pytest==6.0.1",
+#    "pytest-cov==2.10.0",
+#    "coveralls==2.1.2"
+#]
+
+#doc = [
+#    "mkdocs>=1.1.2,<2.0.0",
+#    "mkdocs-material>=5.5.0,<6.0.0",
+#    "markdown-include>=0.5.1,<0.6.0"
+#]
+#
+#dev = [
+#    "cryptography>=2.6,<4.0.0",
+#    "uvicorn>=0.11.5,<0.12.0"
+#]
+#
+#asymmetric = ["cryptography>=2.6,<4.0.0"]
+pydantic = "^2.6.0"
+pydantic-settings = "^2.1.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.0.0"
+requests = "^2.31.0"
+cryptography = "^42.0.2"
+httpx = "^0.26.0"
+coverage = "^7.4.1"
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
