--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,23 +7,25 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.10, 3.11]
       fail-fast: false
-    
+
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Flit
-        run: pip install flit
+      - name: Install Poetry
+        run: pip install poetry
       - name: Install Dependencies
-        run: flit install --symlink
+        run: poetry install
+
       - name: Test
-        run: bash scripts/tests.sh
-      - name: Coveralls
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          coveralls
+        run: coverage run -m pytest
+
+#      - name: Coveralls
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        run: |
+#          coveralls
