--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "another-fastapi-jwt-auth"
-authors = ["Nyoman Pradipta Dewantara<nyomanpradipta120@gmail.com>", "delrey1"]
+authors = ["Nyoman Pradipta Dewantara<nyomanpradipta120@gmail.com>", "delrey1<del@rey>"]
 description = "Another iteration of fastapi-jwt-auth"
 version = "0.0.1"
 homepage = "https://github.com/delrey1/another-fastapi-jwt-auth"
