Running default pytest interim - Unclear why module (after being installed) was not working

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,7 @@ jobs:
         run: poetry install
 
       - name: Test
-        run: python -m coverage run -m pytest
+        run: pytest
 
 #      - name: Coveralls
 #        env:
