--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,9 @@ requests = "^2.31.0"
 cryptography = "^42.0.2"
 httpx = "^0.26.0"
 coverage = "^7.4.1"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
