--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Install Dependencies
         run: poetry install
       - name: Test
-        run: poetry run pytest
+        run: poetry run coverage run -m pytest
+
 #      - name: Coveralls
 #        env:
 #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
