--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
 [tool.poetry.dependencies]
 fastapi = "^0.115.8"
 PyJWT = "^2.10.1"
-python = "^3.9.0, <4"
+python = ">3.9.0,<3.9.1 || >3.9.1,<4.0.0"
 pydantic = ">=2, <3"
 pydantic-settings = ">=2, <3"
 
