--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "another-fastapi-jwt-auth"
 authors = ["Nyoman Pradipta Dewantara <nyomanpradipta120@gmail.com>", "delrey1 <del@rey>"]
 description = "Another iteration of fastapi-jwt-auth"
-version = "0.1.6"
+version = "0.1.7"
 homepage = "https://github.com/delrey1/another-fastapi-jwt-auth"
 readme = "README.md"
 classifiers = [
@@ -20,7 +20,7 @@ classifiers = [
 
 
 [tool.poetry.dependencies]
-fastapi = ">=0.115.12"
+fastapi = ">=0.128.0"
 PyJWT = ">2"
 python = ">=3.10, <4"
 pydantic = ">=2, <3"
@@ -32,12 +32,12 @@ pydantic = ">=2, <3"
 
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.4.0"
+pytest = ">=9"
 requests = "^2.32.3"
-cryptography = ">=42.0.2,<44.0.0"
-httpx = "^0.26.0"
-coverage = "^7.8.2"
-pytest-cov = "^4.1.0"
+cryptography = ">=46.0.0"
+httpx = ">0.26.0"
+coverage = ">=7.13"
+pytest-cov = ">=7"
 pydantic-settings = ">=2, <3"
 
 
